--- a/cinefilando/Views/Base.lproj/Main.storyboard
+++ b/cinefilando/Views/Base.lproj/Main.storyboard
@@ -299,6 +299,7 @@
                     <connections>
                         <outlet property="nowPlayingCollectionView" destination="1qu-M6-Qzc" id="n9w-mM-dKU"/>
                         <outlet property="popularCollectionView" destination="Edo-gU-6Yl" id="sS9-cb-icm"/>
+                        <segue destination="tkR-qd-yLA" kind="show" identifier="detailsSegue" id="MkQ-bL-LIj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -311,6 +312,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="6zX-Mo-E7C" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="9bo-P0-6zP">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
@@ -341,10 +343,142 @@
             </objects>
             <point key="canvasLocation" x="500.00000000000006" y="130.58035714285714"/>
         </scene>
+        <!--Details View Controller-->
+        <scene sceneID="lOb-uG-Yb9">
+            <objects>
+                <viewController id="tkR-qd-yLA" customClass="DetailsViewController" customModule="cinefilando" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="e9f-D3-vFt">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="1344"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="F0m-fB-gnq">
+                                <rect key="frame" x="0.0" y="88" width="414" height="1173"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="oGi-qY-rPP">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="605.5"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AvG-2D-rkf">
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="221"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="AvG-2D-rkf" secondAttribute="height" multiplier="375:200" id="kui-HO-Dkf"/>
+                                                </constraints>
+                                            </imageView>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J4e-Zb-vzX" userLabel="Title Label View">
+                                                <rect key="frame" x="0.0" y="229" width="414" height="50"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;titleLabel&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yqq-0q-QW1">
+                                                        <rect key="frame" x="16" y="0.0" width="382" height="50"/>
+                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="trailing" secondItem="yqq-0q-QW1" secondAttribute="trailing" constant="16" id="0hn-xF-jK5"/>
+                                                    <constraint firstAttribute="bottom" secondItem="yqq-0q-QW1" secondAttribute="bottom" id="XXU-sQ-uuQ"/>
+                                                    <constraint firstItem="yqq-0q-QW1" firstAttribute="top" secondItem="J4e-Zb-vzX" secondAttribute="top" id="lyx-fx-CNL"/>
+                                                    <constraint firstItem="yqq-0q-QW1" firstAttribute="leading" secondItem="J4e-Zb-vzX" secondAttribute="leading" constant="16" id="xeb-oV-Ubo"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EjG-ZY-cch" userLabel="Divider One View">
+                                                <rect key="frame" x="0.0" y="287" width="414" height="1"/>
+                                                <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pxB-ci-msg" userLabel="Divider One">
+                                                        <rect key="frame" x="16" y="0.0" width="382" height="1"/>
+                                                        <color key="backgroundColor" systemColor="labelColor"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="1" id="rcr-3q-gto"/>
+                                                        </constraints>
+                                                    </view>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="bottom" secondItem="pxB-ci-msg" secondAttribute="bottom" id="9gb-0c-RxZ"/>
+                                                    <constraint firstAttribute="trailing" secondItem="pxB-ci-msg" secondAttribute="trailing" constant="16" id="PQk-sZ-3j2"/>
+                                                    <constraint firstItem="pxB-ci-msg" firstAttribute="leading" secondItem="EjG-ZY-cch" secondAttribute="leading" constant="16" id="PQn-Ga-Fqs"/>
+                                                    <constraint firstItem="pxB-ci-msg" firstAttribute="top" secondItem="EjG-ZY-cch" secondAttribute="top" id="z5C-Tj-kda"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="A2I-S5-Cf1">
+                                                <rect key="frame" x="0.0" y="296" width="414" height="193"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6yE-W8-DhH">
+                                                        <rect key="frame" x="0.0" y="0.0" width="125" height="193"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    </imageView>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="FFY-mU-UnB">
+                                                        <rect key="frame" x="133" y="0.5" width="142" height="21.5"/>
+                                                        <subviews>
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="9E6-ph-KnC">
+                                                                <rect key="frame" x="0.0" y="-0.5" width="22" height="21.5"/>
+                                                                <color key="tintColor" systemColor="labelColor"/>
+                                                            </imageView>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;ratingLabel&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N5b-Sw-91l">
+                                                                <rect key="frame" x="30" y="0.0" width="112" height="21.5"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                                <nil key="textColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                        </subviews>
+                                                    </stackView>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            </view>
+                                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Cxd-iU-ELo" userLabel="Divider Two">
+                                                <rect key="frame" x="0.0" y="497" width="414" height="50"/>
+                                                <color key="backgroundColor" systemColor="labelColor"/>
+                                            </view>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Overview" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bF9-jC-6wt">
+                                                <rect key="frame" x="0.0" y="555" width="414" height="23"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="&lt;overviewLabel&gt;" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kXK-87-bpi">
+                                                <rect key="frame" x="0.0" y="586" width="414" height="19.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="oGi-qY-rPP" firstAttribute="bottom" secondItem="Tuk-Zs-X7B" secondAttribute="bottom" id="1Av-MD-cE4"/>
+                                    <constraint firstItem="oGi-qY-rPP" firstAttribute="top" secondItem="Tuk-Zs-X7B" secondAttribute="top" id="GWo-Zg-g7d"/>
+                                    <constraint firstItem="oGi-qY-rPP" firstAttribute="leading" secondItem="Tuk-Zs-X7B" secondAttribute="leading" id="XiG-NJ-Z2D"/>
+                                    <constraint firstItem="oGi-qY-rPP" firstAttribute="trailing" secondItem="Tuk-Zs-X7B" secondAttribute="trailing" id="aDg-kL-8O3"/>
+                                    <constraint firstItem="oGi-qY-rPP" firstAttribute="width" secondItem="4t2-sU-JWV" secondAttribute="width" id="nFn-f6-lfr"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="Tuk-Zs-X7B"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="4t2-sU-JWV"/>
+                            </scrollView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="9NI-R0-dpI"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="F0m-fB-gnq" firstAttribute="trailing" secondItem="9NI-R0-dpI" secondAttribute="trailing" id="3Rd-qE-ZNY"/>
+                            <constraint firstItem="F0m-fB-gnq" firstAttribute="leading" secondItem="9NI-R0-dpI" secondAttribute="leading" id="RtR-fc-qcO"/>
+                            <constraint firstItem="F0m-fB-gnq" firstAttribute="top" secondItem="9NI-R0-dpI" secondAttribute="top" id="kMu-hH-lZW"/>
+                            <constraint firstItem="F0m-fB-gnq" firstAttribute="bottom" secondItem="9NI-R0-dpI" secondAttribute="bottom" id="u5y-rH-BdC"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="Z3B-Sn-jrv"/>
+                    <size key="freeformSize" width="414" height="1344"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9M2-Iz-rie" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2257.971014492754" y="131.91964285714286"/>
+        </scene>
     </scenes>
     <resources>
         <image name="film" catalog="system" width="128" height="93"/>
         <image name="film.fill" catalog="system" width="128" height="93"/>
+        <image name="star.fill" catalog="system" width="128" height="116"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="linkColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
